--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,37 @@
 @tailwind utilities;
 
 /* styles.css */
+.bubble-btn {
+  background-color: black;
+  color: white;
+  border: 2 solid white;
+  border-radius: 10px;
 
+
+  padding: 20px 40px;
+  font-size: 16px;
+  position: relative;
+  transition: transform 0.3s;
+}
+
+.bubble-btn:hover {
+  animation: bubble 1s ease-out;
+  background-color: white;
+  color: black;
+  z-index: 10;
+}
+
+@keyframes bubble {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .project-photo {
   position: relative;
   overflow: hidden;
